@startuml relational_data_model_diagram

skinparam linetype ortho
skinparam shadowing false
skinparam handwritten false

' Define table style
hide methods
hide stereotypes

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' RBAC Tables
class users {
  <u>user_id</u>
  full_name
  email
  password
  positive_reviews
  negative_reviews
  status
  password_updated_at
  failed_login_attempts
  last_login_at
  created_at
}

class roles {
  <u>role_id</u>
  name
}

class permissions {
  <u>permission_id</u>
  name
}

class users_roles {
  <u>user_id</u>
  <u>role_id</u>
}

class roles_permissions {
  <u>role_id</u>
  <u>permission_id</u>
}

' Category
class categories {
  <u>category_id</u>
  name
  slug
  parent_id
}

' Products
class products {
  <u>product_id</u>
  category_id
  seller_id
  highest_bidder_id
  name
  thumbnail_url
  current_price
  buy_now_price
  start_price
  step_price
  start_time
  end_time
  bid_count
  auto_extend
  status
}

class product_descriptions {
  <u>description_id</u>
  product_id
  author_id
  content
  lang
  version
  created_at
}

class product_images {
  <u>image_id</u>
  product_id
  image_url
}

' Bidding
class bids {
  <u>bid_id</u>
  product_id
  bidder_id
  amount
  is_auto
  created_at
}

class auto_bids {
  <u>auto_bid_id</u>
  product_id
  bidder_id
  max_amount
  created_at
}

class watchlist {
  <u>user_id</u>
  <u>product_id</u>
}

class product_rejections {
  <u>rejection_id</u>
  product_id
  bidder_id
  reason
  created_at
}

' Comments
class product_comments {
  <u>comment_id</u>
  product_id
  user_id
  content
  parent_id
  created_at
  updated_at
}

' Orders
class orders {
  <u>order_id</u>
  product_id
  winner_id
  seller_id
  final_price
  status
  cancellation_reason
  created_at
}

class invoices {
  <u>invoice_id</u>
  order_id
  shipping_address
  payment_proof_url
  shipping_tracking_code
  created_at
  updated_at
}

class reviews {
  <u>review_id</u>
  order_id
  reviewer_id
  reviewered_id
  rating
  content
  created_at
  updated_at
}

class order_chat {
  <u>message_id</u>
  order_id
  sender_id
  receiver_id
  content
  created_at
}

' User Management
class user_otps {
  <u>otp_id</u>
  user_id
  otp_code
  purpose
  created_at
  expires_at
  consumed_at
}

class upgrade_requests {
  <u>request_id</u>
  user_id
  status
  created_at
  approved_at
}

' Notifications
class notifications {
  <u>notification_id</u>
  user_id
  type
  channel
  content
  is_read
  read_at
  action_url
  created_at
}

' System Settings
class system_settings {
  <u>setting_key</u>
  setting_value
  description
  updated_at
}

' RBAC Relationships
users ||--o{ users_roles
roles ||--o{ users_roles
roles ||--o{ roles_permissions
permissions ||--o{ roles_permissions

' Category self-reference
categories ||--o{ categories : parent_id

' Product Relationships
categories ||--o{ products
users ||--o{ products : seller
users ||--o{ products : highest_bidder
products ||--o{ product_descriptions
products ||--o{ product_images

' Bidding Relationships
products ||--o{ bids
users ||--o{ bids : bidder
products ||--o{ auto_bids
users ||--o{ auto_bids : bidder
products ||--o{ watchlist
users ||--o{ watchlist
products ||--o{ product_rejections
users ||--o{ product_rejections : bidder

' Comments
products ||--o{ product_comments
users ||--o{ product_comments : user
product_comments ||--o{ product_comments : parent_id

' Order Relationships
products ||--o| orders
users ||--o{ orders : winner
users ||--o{ orders : seller
orders ||--|| invoices
orders ||--o{ reviews
orders ||--o{ order_chat
users ||--o{ reviews : reviewer
users ||--o{ reviews : reviewered
users ||--o{ order_chat : sender
users ||--o{ order_chat : receiver

' User Management
users ||--o{ user_otps
users ||--o{ upgrade_requests
users ||--o{ notifications

note bottom of products
  <b>Triggers:</b>
  • update_product_on_bid
  • auto_extend_auction
  
  <b>Indexes:</b>
  • (status, end_time)
  • (category_id, status)
end note

note bottom of bids
  <b>Triggers:</b>
  • update_product_on_bid_insert
  • auto_extend_on_late_bid
  
  <b>Indexes:</b>
  • (product_id, created_at DESC)
  • (bidder_id)
end note

note top of categories
  <b>Trigger:</b>
  • auto_generate_slug()
  
  <b>Constraints:</b>
  • UNIQUE(parent_id, slug)
  • CHECK(parent_id != category_id)
  • 2-level hierarchy only
end note

note top of auto_bids
  <b>Constraints:</b>
  • UNIQUE(product_id, bidder_id)
  
  <b>Index:</b>
  • (product_id, created_at ASC)
  for tie-breaker
end note

note top of product_descriptions
  <b>Constraints:</b>
  • UNIQUE(product_id, version)
  
  <b>Append-only:</b>
  Cannot UPDATE, only INSERT
  new versions
end note

note bottom of reviews
  <b>Triggers:</b>
  • update_user_rating_on_review_insert
  • update_user_rating_on_review_update
  
  <b>Constraint:</b>
  • UNIQUE(order_id, reviewer_id, reviewered_id)
end note

note top of user_otps
  <b>Constraint:</b>
  • UNIQUE(user_id, purpose)
    WHERE consumed_at IS NULL
  
  Only 1 active OTP per purpose
end note

note bottom of notifications
  <b>Index:</b>
  • (user_id, is_read, created_at DESC)
end note

note bottom of system_settings
  <b>Initial Data:</b>
  • auto_extend_threshold_minutes: 5
  • auto_extend_duration_minutes: 10
  • new_product_highlight_minutes: 60
  • min_rating_percentage: 80
  
  <b>Configurable by Admin</b>
end note

@enduml
